--- a/FinalAssignment/package.json
+++ b/FinalAssignment/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "moment": "^2.22.2",
+    "path": "^0.12.7",
     "redis": "^2.8.0"
   },
   "devDependencies": {},
