--- a/FinalAssignment/package.json
+++ b/FinalAssignment/package.json
@@ -9,6 +9,7 @@
     "ajv": "^6.6.1",
     "ajv-moment": "^2.0.0",
     "alert-node": "^1.2.2",
+    "bluebird": "^3.5.3",
     "chance": "^1.0.16",
     "cookies": "^0.7.3",
     "express": "^4.16.4",
